--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>FullName</artifactId>
+	<artifactId>Category</artifactId>
 	<version>1</version>
-	<name>Full Name</name>
-	<description>Demo project for Full Name</description>
+	<name>Category</name>
+	<description>Demo project for Category Name</description>
 	<url/>
 	<properties>
 		<java.version>17</java.version>
@@ -34,6 +34,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
 
     <!-- For JSON serialization (already included with starter-web, but good to be explicit) -->
     <dependency>
@@ -47,6 +53,11 @@
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>1.6.15</version> <!-- works with Spring Boot 2.x -->
     </dependency>
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
 
     <!-- Optional: Lombok to reduce boilerplate code -->
     <dependency>
